	(epackage-require-ssh): Use `epackage-ssh-url-p'.
	(epackage-package-status-actions): Add missing  package' args to
	function calls.
	(epackage-package-byte-compiled-p): Correct variable `try' to 'list'.
	Correct directory handling.
	(epackage-pkg-lisp-directory): Correct to use  `file-directory-p'.
	(epackage-status-install-files): New.
	(epackage-upgrade-package-files): Write function body.

2011-04-12 Tue  Jari Aalto  <jari.aalto@cante.net>

	* epackage.el
	(top level::Installation): Explain how to use github with http
	protocol.
	(epackage-download-sources-list): Improve
	error condition checks. Recreate clone directory as needed.
	(epackage-git-command-checkout-force-head): New.
	(epackage-cmd-download-sources-list): Rearrange calls and
	act upon status of `epackage-download-sources-list'.
	(epackage-initialize): Always call
	`epackage-cmd-download-sources-list' to get clean state.
	(epackage-sources-list-initialize): Send
	`epackage--build-sources-list-hook' to `epackage-combine-files'.
	(epackage-combine-files): add arg HOOKS.
	(epackage-replace-regexp-in-buffer): New.
	(epackage--build-sources-list-replace-table): New.
	(epackage-ui): New. Alias to `epackage-batch-ui-menu' for
	commadn line calling.
	(epackage-combine-files): Use
	`epackage--build-sources-list-replace-table'.
	(epackage-cmd-upgrade-package): Improve "not downloaded" message.
	(epackage-recreate-package): Move location.
	(epackage-cmd-download-package): Adjust message string: "No
	package selected..."
	(epackage-cmd-upgrade-package): Add call to
	`epackage-run-action-list'.
	(epackage-package-installed-p): New.
	(epackage-package-autoload-p): New.
	(epackage-file-name-loaddefs-compose): New.
	(epackage-package-activated-p): Use
	`epackage-file-name-install-compose'.
	(epackage-package-enabled-p): Use
	`epackage-file-name-install-compose'.
	(epackage-package-loaddefs-p): New.
	(epackage-file-name-enabled-compose): Remove.
	(epackage-file-name-activated-compose): Remove.